more commenting out

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
 MON 12/21/15
+    - 7:10pm -
+        Found more references to Courses and commented them out. Still no errors.
+MON 12/21/15
     - 6:40pm -
         Edited out all references to Courses to make sure there weren't any missing links. No errors!
