--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 MON 12/21/15
+    - 10:28pm -
+        added search and sort for user admin page
+MON 12/21/15
     - 7:10pm -
         Found more references to Courses and commented them out. Still no errors.
 MON 12/21/15
