--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+FRI 12/25/15
+    - 11:26am -
+        moved screen files into individual folders
 MON 12/21/15
     - 10:28pm -
         added search and sort for user admin page
