--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-TODO: Remove all references to Courses completely (instead of commenting out)
+TODO: Implement Products
 TODO: Screens with WRITING abilities must require admin role
 TODO: Screens with READING abilities only don't require admin role
-
+TODO: Remove all references to Courses completely (instead of commenting out)
