--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+SAT 12/26/15
+    - 8:38am -
+        implementing the admin-only edit-product button and the jade template
 FRI 12/25/15
     - 10:40pm -
         added products to database
