added filters and search to products page / price is type:Number instead of string

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-TODO: Compare old and new Products page
+TODO: Compare old and new Products page √
 TODO: Implement Products √
 TODO: Screens with WRITING abilities must require admin role
 TODO: Screens with READING abilities only don't require admin role
